# chess-enhancement-software

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
src/: main.py
src/scripts/: create-shadow-root.js  draw-data.js  get-board-orientation.js
