[tool.poetry]
name = "chess-enhancement-software"
version = "0.1.0"
description = ""
authors = ["Anthony Printup <anthony@printup.io>"]
readme = "README.md"
packages = [{include = "chess.enhancement.software", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
playwright = "^1.30.0"
chess = "^1.9.4"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
mypy = "^1.0.1"
pytest = "^7.2.1"
pre-commit = "^3.0.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
